{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 15,
  "lineage": "20b8e770-aab5-5b66-d00e-6923a14e2218",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/zones/us-central1-a/instanceGroups/apache-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-08-21T09:07:57.353-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "IVf6UoOBnQg=",
            "generated_id": 5737280319926237874,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/healthChecks/apache-hc"
            ],
            "id": "projects/white-inscriber-469614-a1/global/backendServices/apache-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "apache-backend",
            "port_name": "http",
            "project": "white-inscriber-469614-a1",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/backendServices/apache-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.mig",
            "google_compute_instance_template.apache_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-21T09:20:48.470-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/white-inscriber-469614-a1/global/firewalls/allow-http-and-hc",
            "log_config": [],
            "name": "allow-http-and-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "white-inscriber-469614-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/firewalls/allow-http-and-hc",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.13.116.83",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-08-21T09:25:47.065-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/white-inscriber-469614-a1/global/addresses/apache-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "apache-lb-ip",
            "prefix_length": 0,
            "project": "white-inscriber-469614-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/addresses/apache-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 7012670742509319799,
            "id": "projects/white-inscriber-469614-a1/global/forwardingRules/apache-http-fr",
            "ip_address": "34.13.116.83",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "apache-http-fr",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "white-inscriber-469614-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/forwardingRules/apache-http-fr",
            "target": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/targetHttpProxies/apache-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.mig",
            "google_compute_instance_template.apache_template",
            "google_compute_target_http_proxy.proxy",
            "google_compute_url_map.umap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-21T09:09:03.157-07:00",
            "fingerprint": "n6E0NgS9weM=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/white-inscriber-469614-a1/global/targetHttpProxies/apache-http-proxy",
            "name": "apache-http-proxy",
            "project": "white-inscriber-469614-a1",
            "proxy_bind": false,
            "proxy_id": 5792069083122563696,
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/targetHttpProxies/apache-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/urlMaps/apache-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.mig",
            "google_compute_instance_template.apache_template",
            "google_compute_url_map.umap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "umap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-21T09:08:51.112-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/backendServices/apache-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "spDTaJ_08SY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/white-inscriber-469614-a1/global/urlMaps/apache-url-map",
            "map_id": 8411628722818054780,
            "name": "apache-url-map",
            "path_matcher": [],
            "project": "white-inscriber-469614-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/white-inscriber-469614-a1/global/urlMaps/apache-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.mig",
            "google_compute_instance_template.apache_template"
          ]
        }
      ]
    }
  ]
}